fix: horizontal scroll style (#144)
* fix: horizontal scroll style

* update package version

--- a/packages/components/src/index.module.css
+++ b/packages/components/src/index.module.css
@@ -122,6 +122,7 @@ body {
 
 ::-webkit-scrollbar {
   width: 10px;
+  height: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
